--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Rike-Learning",
+  "name": "rike-learning",
   "homepage": "https://rike-learning.com/",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -47,5 +47,16 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
     "vite": "^4.3.9"
+  },
+  "description": "Rike-learning ",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shakiltousif/rike-learning-react.git"
+  },
+  "author": "Shakil Ahamed",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/shakiltousif/rike-learning-react/issues"
   }
 }
